Update Network and restore transformer branch.

--- a/notebooks/ResultsLoadingDat.ipynb
+++ b/notebooks/ResultsLoadingDat.ipynb
@@ -211,7 +211,7 @@
     "    \"PAG\": [\"1186\", \"1161\", \"1161w1199\", \"1124\", \"1186\", \"1117\", \"1199\", \"994\"],\n",
     "    \"Umaze\": [\"1199\", \"906\", \"1168\", \"905\", \"1182\"],\n",
     "    # WARNING: 994 has non-aligned nnbehavior.positions; hence the results should not be trusted\n",
-    "    # same for\n",
+    "    # same for 1239v3\n",
     "}\n",
     "\n",
     "list_windows = [36, 108, 200, 252, 504]"
