--- a/install
+++ b/install
@@ -11,7 +11,7 @@ echo "[INFO] Running setup for Linux/macOS..."
 # 1. Install system dependencies
 if command -v apt-get &> /dev/null; then
     sudo apt-get update
-    sudo apt-get install -y python3-dev python3-pip python3-venv python3-tk jq xmlstarlet curl
+    sudo apt-get install -y python3-dev python3-pip python3-venv python3-tk jq xmlstarlet curl graphviz
 elif command -v brew &> /dev/null; then
     brew install python jq xmlstarlet curl
 else
